--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <link rel="stylesheet" href="style.css">
 <center>
 <h1><span style='color:blue'>Auto HEN Installer HFW 4.91</span></h1>
-<h1><span style='color:black'>Instalador creado por VIDEOGAMES SCZ gracias al equipo de PSXPlace por brindar sus herramientas y conocimientos, sin ellos no sería esto posible</span></h1>
-<hr><span style='color:black'>Gracias a Coro, lmn7, Joonie, evilnat, luan teles, habib, zecoxao, DeViL303, xps3riments, aldostools, and PS3Xploit Team for their work used or hosted here.</span></h1>
-<hr>
+<h1><span style='color:black'>Gracias a Coro, lmn7, Joonie, evilnat, luan teles, habib, zecoxao, DeViL303, xps3riments, aldostools, and PS3Xploit Team for their work used or hosted here.</span></h1>
+<h1><span style='color:black'>HEN 3.3.0 y FIX Multistore incluido</span></h1>
+<hr><span style='color:black'>Instalador modificado por VIDEOGAMES SCZ y gracias al equipo de PSXPlace por brindar sus herramientas y conocimientos, sin ellos no sería esto posible</span></h1>
 <div id="result"></div>
 <div id="exploit"></div>
 <div id="trigger" style="display: none;"></div>
@@ -396,4 +396,3 @@ function HFWmsg()
 }
 if(fwv=="4.91"){initROP(true)}else{HFWmsg()}
 </script>
-
